--- a/index.html
+++ b/index.html
@@ -7,17 +7,27 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     </head>
-    <body style="padding-top: 100px;background-color:orange">
+    <body style="padding-top: 100px;background-color:white;">
         <!--HEADER-->
             <div class="navbar navbar navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <button style="border: 2px solid red;padding: 7px;margin-top: 20px;" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>                        
+                        <span class="icon-bar"></span>    
                     </button>
                     <a class="navbar-brand" href="index.html"><span style="font-family: georgia;font-size: 25px;color: black"><img src="TalentFore-Logo_01.png" style="width: 250px;background-color: white;border: 2px solid darkred;border-radius: 20px;"></span></a>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav navbar-right" style="padding-top: 25px;">
+                         <li><span class="icon">1</span> Heading </li>
+                                <li><span class="icon">2</span> Work History </li>
+                                <li><span class="icon">3</span> Education </li>
+                                <li><span class="icon">4</span> Skills </li>
+                                <li><span class="icon">5</span> Summary </li>
+                                <li><span class="icon">6</span> Finalize </li>
+                    </ul>
                 </div>
             </div>
             </div>
@@ -28,24 +38,12 @@
                     <div class="col-xs-5 col-sm-3 col-md-3 col-lg-3 leftpanel" >
                         <div class="content">
                             <img src="rocket1.png" style="width: 40px;;height: 80px;color: orange;">
-                            <h3 style="padding: 10px;font-family: georgia;font-weight: bold;color: orange">Build A <br> Compelling <br>Resume</h3>
+                            <h3 style="padding: 10px;font-family: georgia;font-weight: bold;color: white">Build A <br> Compelling <br>Resume</h3>
                             <p style="padding: 10px;">Check your spellings,<br> use your intials carefully, if any.<br> A mistake in your name <br> ins't appreciated on a resume.</p>
                         </div>
                     </div>
-                    <div class="col-xs-6 col-sm-8 col-xs-offset-1 rightpanel">
-                        <div class="tracker">
-                            <ul class="nav navbar-nav ">
-                                <li><span class="icon">1</span> Heading </li>
-                                <li><span class="icon">2</span> Work History </li>
-                                <li><span class="icon">3</span> Education </li>
-                                <li><span class="icon">4</span> Skills </li>
-                                <li><span class="icon">5</span> Summary </li>
-                                <li><span class="icon">6</span> Finalize </li>
-                            </ul>
-                        </div>
-                    </div>
                         <div class="col-xs-6 col-sm-8 col-xs-offset-1 rightpanel">
-                        <div style="padding-top: 40px;">
+                        <div style="padding-top: 20px;">
                             <span style="float: right;font-family: geogia;;border-radius: 10px;"><button class="btn btn-danger" style="border: 2px solid white;border-radius: 30px;border-bottom-right-radius: 0;border-top-right-radius: 0">Preview</button><button class="btn btn-danger" style="border: 2px solid white;border-bottom-right-radius: 0px;border-radius: 30px;border-top-left-radius: 0;border-bottom-left-radius: 0">Download</button></span> 
                         </div>
                         
@@ -98,12 +96,12 @@
                                 </div>
                                 <div class="text-left form-group col-xs-5" style="padding: 10px;l">
                                      <label>
-                                         Mobile Number
+                                         Mobile
                                     </label><br>
                                     <input type="number" class="form-control" id="inputName" placeholder="Mobile number">
                                 </div>
                                 </div> 
-                                <div>
+                                <div style="margin-top: 10px;">
                                 <button class="btn btn-danger" style="border-radius: 15px;"> Back
                                 </button>
                                 <button style="float: right;border-radius: 15px;" class="btn btn-danger"> Next
