--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <meta charset="UTF-8">
+
+<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" />
         <title>Design Template</title>
         <link href="style.css" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -17,7 +18,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>    
                     </button>
-                    <a class="navbar-brand" href="index.html"><span style="font-family: georgia;font-size: 25px;color: black"><img src="TalentFore-Logo_01.png" style="width: 250px;background-color: white;border: 2px solid darkred;border-radius: 20px;"></span></a>
+                    <a class="navbar-brand" href="index.html"><span style="font-family: georgia;font-size: 25px;color: black"><img src="TalentFore-Logo_01.png" style="width: 250px;background-color: white;"></span></a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav navbar-right" style="padding-top: 25px;">
@@ -28,6 +29,7 @@
                                 <li><span class="icon">5</span> Summary </li>
                                 <li><span class="icon">6</span> Finalize </li>
                     </ul>
+                    
                 </div>
             </div>
             </div>
