--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>    
                     </button>
-                    <a class="navbar-brand" href="index.html"><span style="font-family: georgia;font-size: 25px;color: black"><img src="TalentFore-Logo_01.png" style="width: 250px;background-color: white;"></span></a>
+                    <a class="navbar-brand" href="index.html"><span style="font-family: georgia;font-size: 25px;color: black"><img id="logo" src="TalentFore-Logo_01.png"></span></a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav navbar-right" style="padding-top: 25px;">
