--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
             <div class="container">
                 <div class="row" style="padding-bottom: 40px;">
                     <div class="col-xs-4 col-sm-4 col-md-3 col-lg-3 leftpanel" >
-                        <div class="content">
+                        <div class="content text-center">
                             <img src="rocket1.png" style="width: 40px;;height: 80px;color: orange;">
-                            <h3 style="padding: 10px;font-family: georgia;font-weight: bold;color: white">Build A <br> Compelling <br>Resume</h3>
-                            <p style="padding: 10px;">Check your spellings,<br> use your intials carefully, if any.<br> A mistake in your name <br> ins't appreciated on a resume.</p>
+                            <h4 style="padding-top:10px; font-family:georgia;"><b>Build A<br>Compelling <br>
+                                Resume</b></h4>
+                            <p style="padding: 10px;color: aliceblue">Check your spellings,<br> use your intials carefully, if any.<br> A mistake in your name <br> ins't appreciated on a resume.</p>
                         </div>
                     </div>
                         <div class="col-xs-6 col-sm-6 col-md-8 col-xs-offset-2 col-sm-offset-1 rightpanel">
