--- a/summary.html
+++ b/summary.html
@@ -27,7 +27,7 @@
                             <div class="steps">
                                 <span class="step-element">
                                     <a href="index.html" id="link">
-                                        <span class="step-no">1</span><span class="step-text" style="color: #fe6625"> HEADING </span>
+                                        <span class="step-no">1</span><span class="step-text" > HEADING </span>
                                     </a>
                                 </span>
                                 <span class="step-element">
@@ -45,7 +45,7 @@
                                     </a>
                                 </span>
                                 <span class="step-element">
-                                    <a href="summary.html" id="link"><span class="step-no">5</span><span class="step-text"> SUMMARY </span>
+                                    <a href="summary.html" id="link"><span class="step-no">5</span><span class="step-text" style="color: #fe6625"> SUMMARY </span>
                                     </a>
                                 </span>
                                 <span class="step-element">
