--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                        </div>
                                        <div class="text-left form-group col-xs-4" style="padding: 10px;l">
                                             <label>
-                                               PIN
+                                               Pin
                                             </label><br>
                                             <input type="text" class="form-control" id="inputName" placeholder="PinCode">
                                        </div>
